Fix: adjusted card footer bg color, added spacing around price box to fix Lighthouse and A11y accessibility issues

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -266,6 +266,10 @@ hr {
     border-radius: 0;
 }
 
+.card-footer {
+    border-top: 1px solid #fff;
+}
+
 /* ------------------------------- bootstrap toasts */
 .message-container {
     position: fixed;
